Fix banner spacing

--- a/sites/default/themes/ecuador360/css/main.css
+++ b/sites/default/themes/ecuador360/css/main.css
@@ -257,7 +257,7 @@ li a.active {
 
 #block-views-logo-block {
   float: left;
-  margin-left: 200px;
+  margin-left: 160px;
 }
 
 #block-menu-menu-main-menu-espa-ol,
